--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -4,7 +4,22 @@
 
 \eesTitlePage
 
-\eesCriticalReport{}
+\eesCriticalReport{
+  1 & 2   & trb 1, A & 6th \eighthNote\ in \B1: g′8 \\
+    & 2   & vl 1     & 4th \quarterNote\ in \B1: f″16–e″16–d″8 \\
+    & 7   & A        & 2nd \halfNote\ in \B1: g′4–\sharp f′4 \\
+    & 19  & vl 2     & 1st \eighthNote\ in \B1: d″8 \\
+    & 68  & T        & 2nd \eighthNote\ in \B1: a8 \\
+    & 78  & org      & 1st \eighthNote\ of upper voice missing in \B1 \\
+    & 84  & vl 1     & 3rd \quarterNote\ in \B1: b′16–d″16–d′′′8 \\
+    & 86  & vl 2     & 6th \eighthNote\ in \B1: b8 \\
+    & 89  & vl 1     & last \eighthNote\ in \B1: d″8 \\
+    5 89  & vl 2     & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
+    & 91  & trb 1    & 4th \eighthNote\ in \B1: g′8 \\
+    & 92  & trb 1    & 4th \quarterNote\ in \B1: g′8–f′8 \\
+    & 96  & timp     & 1st \quarterNote\ in \B1: c4 \\
+    & 96  & A        & 4th \eighthNote\ in \B1: f′16–e′16 \\
+}
 
 \eesToc{}
 
