--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -19,6 +19,26 @@
     & 92  & trb 1    & 4th \quarterNote\ in \B1: g′8–f′8 \\
     & 96  & timp     & 1st \quarterNote\ in \B1: c4 \\
     & 96  & A        & 4th \eighthNote\ in \B1: f′16–e′16 \\
+  \midrule
+  2 & 5   & trb 2    & 3rd \quarterNote\ in \B1: a8–\sharp g8 \\
+    & 6   & trb 1    & 4th \quarterNote\ in \B1: a′8–a′8 \\
+    & 18  & vl 2     & 4th \sixteenthNote\ in \B1: e″16 \\
+    & 30  & timp     & bar missing in \B1 \\
+    & 34  & trb 1    & 3rd \quarterNote\ in \B1: g′8.–f′32–e′32 \\
+    & 50  & B        & 3rd \quarterNote\ in \B1: e8–g8 \\
+    & 65  & vl 2     & 2nd to 4th \eighthNote\ in \B1: 3 × c′8 \\
+    & 68  & trb 2    & last \eighthNote\ in \B1: a8 \\
+    & 68  & B        & last \eighthNote\ in \B1: f8 \\
+    & 91  & vl 1     & 1st \eighthNote\ in \B1: b″8 \\
+    & 91  & vl 2     & 1st \eighthNote\ in \B1: d″8:
+                       3rd \quarterNote: b″8–g″8 \\
+    & 96f & trb 2    & bars in \B1: d′4–f′8–d′8–b8–g8 and
+                       e′4.–c′8–a8–f8 \\
+    & 97  & T        & 1st \quarterNote\ in \B1: e′4 \\
+    & 98  & vl 2     & 3rd \quarterNote\ in \B1: b′4 \\
+    & 99  & B        & 1st \quarterNote\ in \B1: A8.–B32–c32 \\
+    & 101 & S        & 3rd \quarterNote\ in \B1: e″4 \\
+    & 102 & clno 1   & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
 }
 
 \eesToc{}
