--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -39,6 +39,29 @@
     & 99  & B        & 1st \quarterNote\ in \B1: A8.–B32–c32 \\
     & 101 & S        & 3rd \quarterNote\ in \B1: e″4 \\
     & 102 & clno 1   & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
+  \midrule
+  3 & 8   & timp     & bar missing in \B1 \\
+    & 11  & B        & 4th \eighthNote\ in \B1: a8 \\
+    & 12  & S        & 2nd/3rd \quarterNote\ in \B1: b′4.–b′8 \\
+    & 39  & vl 2     & 2nd to 4th \sixteenthNote\ in \B1:
+                       g′16–\sharp f′16–e′16 \\
+    & 47  & org      & 3rd \quarterNote\ in \B1: c4 \\
+    & 59  & vl 1     & 2nd \eighthNote\ in \B1: a″8 \\
+    & 61  & clno 1   & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
+    & 63  & trb 2    & 111th \sixteenthNote\ in \B1: \flat b16 \\
+    & 101 & A        & 2nd \quarterNote\ in \B1: f′4 \\
+    & 103 & vl 2     & 2nd to 6th \eighthNote\ in \B1: 5 × \flat e′8 \\
+    & 107 & clno 1   & 1st \quarterNote\ in \B1: e″4 \\
+    & 122 & vl 2     & 4th to 6th \eighthNote\ in \B1: \sharp c″8–\sharp c″4 \\
+    & 130 & vl 1     & 2nd \quarterNote\ in \B1: d′′′8–c′′′8 \\
+    & 130 & clno 1, vl 2, S & 3rd \eighthNote\ in \B1: e″8 \\
+    & 150 & trb 1, A & bar in \B1: f′2. \\
+    & 151 & trb 1, A & 1st to 3rd \eighthNote\ in \B1: e′8–g′4 \\
+    & 153f & org     & notes in treble clef added by editor \\
+    & 157 & trb 1    & 1st \quarterNote\ in \B1: f′4 \\
+    & 182 & vl 2     & 3rd \quarterNote\ in \B1: d″8–d″8 \\
+    & 185 & clno 1   & 2nd \quarterNote\ in \B1: f″4 \\
+    & 191 & S        & 2nd/3rd \quarterNote\ in \B1: \crochetRest–d″4 \\
 }
 
 \eesToc{}
