--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -6,62 +6,70 @@
 
 \eesCriticalReport{
   1 & 2   & trb 1, A & 6th \eighthNote\ in \B1: g′8 \\
-    & 2   & vl 1     & 4th \quarterNote\ in \B1: f″16–e″16–d″8 \\
-    & 7   & A        & 2nd \halfNote\ in \B1: g′4–\sharp f′4 \\
-    & 19  & vl 2     & 1st \eighthNote\ in \B1: d″8 \\
-    & 68  & T        & 2nd \eighthNote\ in \B1: a8 \\
-    & 78  & org      & 1st \eighthNote\ of upper voice missing in \B1 \\
-    & 84  & vl 1     & 3rd \quarterNote\ in \B1: b′16–d″16–d′′′8 \\
-    & 86  & vl 2     & 6th \eighthNote\ in \B1: b8 \\
-    & 89  & vl 1     & last \eighthNote\ in \B1: d″8 \\
-    5 89  & vl 2     & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
-    & 91  & trb 1    & 4th \eighthNote\ in \B1: g′8 \\
-    & 92  & trb 1    & 4th \quarterNote\ in \B1: g′8–f′8 \\
-    & 96  & timp     & 1st \quarterNote\ in \B1: c4 \\
-    & 96  & A        & 4th \eighthNote\ in \B1: f′16–e′16 \\
+    & 2   & vl 1   & 4th \quarterNote\ in \B1: f″16–e″16–d″8 \\
+    & 7   & A      & 2nd \halfNote\ in \B1: g′4–\sharp f′4 \\
+    & 19  & vl 2   & 1st \eighthNote\ in \B1: d″8 \\
+    & 68  & T      & 2nd \eighthNote\ in \B1: a8 \\
+    & 78  & org    & 1st \eighthNote\ of upper voice missing in \B1 \\
+    & 84  & vl 1   & 3rd \quarterNote\ in \B1: b′16–d″16–d′′′8 \\
+    & 86  & vl 2   & 6th \eighthNote\ in \B1: b8 \\
+    & 89  & vl 1   & last \eighthNote\ in \B1: d″8 \\
+    5 89  & vl 2   & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
+    & 91  & trb 1  & 4th \eighthNote\ in \B1: g′8 \\
+    & 92  & trb 1  & 4th \quarterNote\ in \B1: g′8–f′8 \\
+    & 96  & timp   & 1st \quarterNote\ in \B1: c4 \\
+    & 96  & A      & 4th \eighthNote\ in \B1: f′16–e′16 \\
   \midrule
-  2 & 5   & trb 2    & 3rd \quarterNote\ in \B1: a8–\sharp g8 \\
-    & 6   & trb 1    & 4th \quarterNote\ in \B1: a′8–a′8 \\
-    & 18  & vl 2     & 4th \sixteenthNote\ in \B1: e″16 \\
-    & 30  & timp     & bar missing in \B1 \\
-    & 34  & trb 1    & 3rd \quarterNote\ in \B1: g′8.–f′32–e′32 \\
-    & 50  & B        & 3rd \quarterNote\ in \B1: e8–g8 \\
-    & 65  & vl 2     & 2nd to 4th \eighthNote\ in \B1: 3 × c′8 \\
-    & 68  & trb 2    & last \eighthNote\ in \B1: a8 \\
-    & 68  & B        & last \eighthNote\ in \B1: f8 \\
-    & 91  & vl 1     & 1st \eighthNote\ in \B1: b″8 \\
-    & 91  & vl 2     & 1st \eighthNote\ in \B1: d″8:
-                       3rd \quarterNote: b″8–g″8 \\
-    & 96f & trb 2    & bars in \B1: d′4–f′8–d′8–b8–g8 and
+  2 & 5   & trb 2  & 3rd \quarterNote\ in \B1: a8–\sharp g8 \\
+    & 6   & trb 1  & 4th \quarterNote\ in \B1: a′8–a′8 \\
+    & 18  & vl 2   & 4th \sixteenthNote\ in \B1: e″16 \\
+    & 30  & timp   & bar missing in \B1 \\
+    & 34  & trb 1  & 3rd \quarterNote\ in \B1: g′8.–f′32–e′32 \\
+    & 50  & B      & 3rd \quarterNote\ in \B1: e8–g8 \\
+    & 65  & vl 2   & 2nd to 4th \eighthNote\ in \B1: 3 × c′8 \\
+    & 68  & trb 2  & last \eighthNote\ in \B1: a8 \\
+    & 68  & B      & last \eighthNote\ in \B1: f8 \\
+    & 91  & vl 1   & 1st \eighthNote\ in \B1: b″8 \\
+    & 91  & vl 2   & 1st \eighthNote\ in \B1: d″8:
+                     3rd \quarterNote: b″8–g″8 \\
+    & 96f & trb 2  & bars in \B1: d′4–f′8–d′8–b8–g8 and
                        e′4.–c′8–a8–f8 \\
-    & 97  & T        & 1st \quarterNote\ in \B1: e′4 \\
-    & 98  & vl 2     & 3rd \quarterNote\ in \B1: b′4 \\
-    & 99  & B        & 1st \quarterNote\ in \B1: A8.–B32–c32 \\
-    & 101 & S        & 3rd \quarterNote\ in \B1: e″4 \\
-    & 102 & clno 1   & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
+    & 97  & T      & 1st \quarterNote\ in \B1: e′4 \\
+    & 98  & vl 2   & 3rd \quarterNote\ in \B1: b′4 \\
+    & 99  & B      & 1st \quarterNote\ in \B1: A8.–B32–c32 \\
+    & 101 & S      & 3rd \quarterNote\ in \B1: e″4 \\
+    & 102 & clno 1 & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
   \midrule
-  3 & 8   & timp     & bar missing in \B1 \\
-    & 11  & B        & 4th \eighthNote\ in \B1: a8 \\
-    & 12  & S        & 2nd/3rd \quarterNote\ in \B1: b′4.–b′8 \\
-    & 39  & vl 2     & 2nd to 4th \sixteenthNote\ in \B1:
-                       g′16–\sharp f′16–e′16 \\
-    & 47  & org      & 3rd \quarterNote\ in \B1: c4 \\
-    & 59  & vl 1     & 2nd \eighthNote\ in \B1: a″8 \\
-    & 61  & clno 1   & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
-    & 63  & trb 2    & 111th \sixteenthNote\ in \B1: \flat b16 \\
-    & 101 & A        & 2nd \quarterNote\ in \B1: f′4 \\
-    & 103 & vl 2     & 2nd to 6th \eighthNote\ in \B1: 5 × \flat e′8 \\
-    & 107 & clno 1   & 1st \quarterNote\ in \B1: e″4 \\
-    & 122 & vl 2     & 4th to 6th \eighthNote\ in \B1: \sharp c″8–\sharp c″4 \\
-    & 130 & vl 1     & 2nd \quarterNote\ in \B1: d′′′8–c′′′8 \\
+  3 & 8   & timp   & bar missing in \B1 \\
+    & 11  & B      & 4th \eighthNote\ in \B1: a8 \\
+    & 12  & S      & 2nd/3rd \quarterNote\ in \B1: b′4.–b′8 \\
+    & 39  & vl 2   & 2nd to 4th \sixteenthNote\ in \B1:
+                     g′16–\sharp f′16–e′16 \\
+    & 47  & org    & 3rd \quarterNote\ in \B1: c4 \\
+    & 59  & vl 1   & 2nd \eighthNote\ in \B1: a″8 \\
+    & 61  & clno 1 & 2nd/3rd \quarterNote\ in \B1: d″4.–d″8 \\
+    & 63  & trb 2  & 111th \sixteenthNote\ in \B1: \flat b16 \\
+    & 101 & A      & 2nd \quarterNote\ in \B1: f′4 \\
+    & 103 & vl 2   & 2nd to 6th \eighthNote\ in \B1: 5 × \flat e′8 \\
+    & 107 & clno 1 & 1st \quarterNote\ in \B1: e″4 \\
+    & 122 & vl 2   & 4th to 6th \eighthNote\ in \B1: \sharp c″8–\sharp c″4 \\
+    & 130 & vl 1   & 2nd \quarterNote\ in \B1: d′′′8–c′′′8 \\
     & 130 & clno 1, vl 2, S & 3rd \eighthNote\ in \B1: e″8 \\
     & 150 & trb 1, A & bar in \B1: f′2. \\
     & 151 & trb 1, A & 1st to 3rd \eighthNote\ in \B1: e′8–g′4 \\
-    & 153f & org     & notes in treble clef added by editor \\
-    & 157 & trb 1    & 1st \quarterNote\ in \B1: f′4 \\
-    & 182 & vl 2     & 3rd \quarterNote\ in \B1: d″8–d″8 \\
-    & 185 & clno 1   & 2nd \quarterNote\ in \B1: f″4 \\
-    & 191 & S        & 2nd/3rd \quarterNote\ in \B1: \crochetRest–d″4 \\
+    & 153f & org   & notes in treble clef added by editor \\
+    & 157 & trb 1  & 1st \quarterNote\ in \B1: f′4 \\
+    & 182 & vl 2   & 3rd \quarterNote\ in \B1: d″8–d″8 \\
+    & 185 & clno 1 & 2nd \quarterNote\ in \B1: f″4 \\
+    & 191 & S      & 2nd/3rd \quarterNote\ in \B1: \crochetRest–d″4 \\
+  \midrule
+  4 & 4   & clno 2 & 2nd \halfNote\ in \B1: d″8.–d″16–d″4 \\
+    & 10  & vl 2   & 3rd \quarterNote\ in \B1: c″16–c′′′16–c′′′8 \\
+    & 11  & vl 2   & 2nd \halfNote\ in \B1: e″4.–d″8 \\
+    & 15  & vl 2   & 1st \quarterNote\ in \B1: e′4 \\
+    & 16  & clno 2 & 2nd \halfNote\ in \B1: d″8.–d″16–d″8–d″8 \\
+    & 28  & vl 2   & last \eighthNote\ in \B1: e″8 \\
+    & 29  & vl 2   & grace note missing in \B1 \\
 }
 
 \eesToc{}
