--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -70,6 +70,15 @@
     & 16  & clno 2 & 2nd \halfNote\ in \B1: d″8.–d″16–d″8–d″8 \\
     & 28  & vl 2   & last \eighthNote\ in \B1: e″8 \\
     & 29  & vl 2   & grace note missing in \B1 \\
+  \midrule
+  5 & 15  & vl 1   & 3rd \quarterNote\ in \B1: e″8–\sharp c″16–d″16 \\
+    & 18  & vlne   & 6th \eighthNote\ in \B1: g8 \\
+    & 35  & vl 1   & 12th \sixteenthNote\ in \B1: d′16;
+                     last \eighthNote: g8 \\
+    & 41  & vl 2   & 1st \sixteenthNote\ in \B1: c″16 \\
+    & 46  & vl 2   & 1st \quarterNote\ in \B1: e′4 \\
+    & 59  & vl 2   & last \eighthNote\ in \B1: e″8 \\
+    & 60  & vl 2   & grace note missing in \B1 \\
 }
 
 \eesToc{}
