--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -61,7 +61,7 @@
     & 157 & trb 1  & 1st \quarterNote\ in \B1: f′4 \\
     & 182 & vl 2   & 3rd \quarterNote\ in \B1: d″8–d″8 \\
     & 185 & clno 1 & 2nd \quarterNote\ in \B1: f″4 \\
-    & 191 & S      & 2nd/3rd \quarterNote\ in \B1: \crochetRest–d″4 \\
+    & 191 & S      & 2nd/3rd \quarterNote\ in \B1: \crotchetRest–d″4 \\
   \midrule
   4 & 4   & clno 2 & 2nd \halfNote\ in \B1: d″8.–d″16–d″4 \\
     & 10  & vl 2   & 3rd \quarterNote\ in \B1: c″16–c′′′16–c′′′8 \\
@@ -79,6 +79,19 @@
     & 46  & vl 2   & 1st \quarterNote\ in \B1: e′4 \\
     & 59  & vl 2   & last \eighthNote\ in \B1: e″8 \\
     & 60  & vl 2   & grace note missing in \B1 \\
+  \midrule
+  6 & 19  & org    & last \eighthNote\ in \B1: \flat B8 \\
+    & 28  & trb 2, T & 4th \quarterNote\ in \B1: e′4 \\
+    & 29  & org    & last \eighthNote\ in \B1: b8 \\
+    & 39  & vl 2   & 1st \quarterNote\ in \B1: a′4 \\
+    & 40  & clno 2 & 3rd \quarterNote\ in \B1: c″4 \\
+    & 41  & clno 2 & 3rd \quarterNote\ in \B1: \crotchetRest \\
+    & 42  & trb 1  & 2nd \halfNote\ in \B1: d′4.–g′16–e′16 \\
+    & 48  & trb 1  & 4th \eighthNote\ in \B1: b′8 \\
+    & 48  & org    & 1st \eighthNote\ of upper voice missing in \B1 \\
+    5 59  & vl 2   & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
+    & 66  & timp   & 1st \quarterNote\ in \B1: c4 \\
+    & 66  & A      & 4th \eighthNote\ in \B1: f′16–e′16 \\
 }
 
 \eesToc{}
