--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -14,7 +14,7 @@
     & 84  & vl 1   & 3rd \quarterNote\ in \B1: b′16–d″16–d′′′8 \\
     & 86  & vl 2   & 6th \eighthNote\ in \B1: b8 \\
     & 89  & vl 1   & last \eighthNote\ in \B1: d″8 \\
-    5 89  & vl 2   & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
+    & 89  & vl 2   & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
     & 91  & trb 1  & 4th \eighthNote\ in \B1: g′8 \\
     & 92  & trb 1  & 4th \quarterNote\ in \B1: g′8–f′8 \\
     & 96  & timp   & 1st \quarterNote\ in \B1: c4 \\
@@ -89,7 +89,7 @@
     & 42  & trb 1  & 2nd \halfNote\ in \B1: d′4.–g′16–e′16 \\
     & 48  & trb 1  & 4th \eighthNote\ in \B1: b′8 \\
     & 48  & org    & 1st \eighthNote\ of upper voice missing in \B1 \\
-    5 59  & vl 2   & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
+    & 59  & vl 2   & 2nd \quarterNote\ in \B1: \sharp f′16–g′16–a′8 \\
     & 66  & timp   & 1st \quarterNote\ in \B1: c4 \\
     & 66  & A      & 4th \eighthNote\ in \B1: f′16–e′16 \\
 }
